# mcp-simple-server

./: Dockerfile  Procfile  README.md  claude_mcp_proxy.py  debug_fastmcp.py  debug_railway_server.py  main.py  pyproject.toml  railway.toml  render.yaml  start.sh  test_deployment.py  test_host_binding.py  test_proxy_script.py  test_server.py  test_streamable_app.py  tool_verification_test.py
